Removed overflow-y and replaced with overflow on body and html to stop scroll on arrow click

--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -39,7 +39,7 @@ overflow: hidden;
   left: 45%;
   width: 45%;
   height: 100%;
-  overflow-y: scroll !important;
+  overflow-y: scroll;
 }
 .nextSlideWrapper {
     display: flex;
@@ -47,7 +47,7 @@ overflow: hidden;
     width: 100%;
     height: 1000px;
     background: #0a0a0af0;
-    backdrop-filter: blur(15px) !important;
+    backdrop-filter: blur(15px);
     z-index: 1;
     transition: .4s all ease-in-out;
     
@@ -305,8 +305,6 @@ animation-name: arrow;
     top: 0;
     left: 50%;
     width: 50%;
-    height: 100%;
-    overflow-y: scroll !important;
   }
 
   .nextSlideWrapper {
